--- a/src/app/modules/about-me/component/about-me.component.html
+++ b/src/app/modules/about-me/component/about-me.component.html
@@ -1,1 +1,55 @@
-<p>about-me works!</p>
+<div class="page-content">
+  <div class="row page-title">
+    <h2>About <span class="primary-text">Me</span></h2>
+  </div>
+
+  <div class="row space-30">
+    <div class="col-lg-7">
+      Hi, this is Vincent He. I am a Full-Stack Developer with 4+ years of experience in providing cutting-edge software solutions. Excited to learn new technologies and try on new responsibilities and roles. Motivated to work in a fast-paced and schedule-driven atmosphere. Able to clearly understand problems and find positive solutions by applying advanced analytical and problem-solving skills. Offer strong collaboration and communication skills within cross-functional technical and business teams.
+    </div>
+    <div class="col-lg-5">
+      <div class="info-list">
+        <ul>
+          <li><span class="primary-text">e-mail </span><a href="mailto:vincenthe1990@gmail.com">vincenthe1990@gmail.com</a></li>
+          <li><span class="primary-text">GitHub </span><a target="_blank" href="https://github.com/VincentSkylark">https://github.com/VincentSkylark</a></li>
+          <li><span class="primary-text">personal site </span><a href="http://v-dev.net/">v-dev.net</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="row space-50">
+    <h3>What <span class="primary-text">I Make</span></h3>
+  </div>
+
+  <div class="row space-30">
+    <div class="col-lg-6">
+      <div><h5>Responsive Front End</h5></div>
+      <div>
+        Create a mobile-friendly web application with modern UI libraries and frameworks like Angular, jQuery, Bootstrap, and Material. Discuss with UX designer and create the cross-platform style guidance. Implement touch support features with dedicated unit tests.
+      </div>
+    </div>
+    <div class="col-lg-6">
+      <div><h5>Scalable Back End</h5></div>
+      <div>
+        Develop sensitive data masking for risky public cloud environments. Implement multi-stage caching and circuit breaker for distributing API. Setup ActiveMQ for message-based communication and distributed lock for cross-instance asynchronous tasks.
+      </div>
+    </div>
+  </div>
+
+  <div class="row space-30">
+    <div class="col-lg-6">
+      <div><h5>Bug Fix and Analysis</h5></div>
+      <div>
+        Navigate issues in production with tools like remote debugger and logz.io. Reproduce issue and test solution in a lower environment. Create monitoring parameters and automatic alerts. Swarming with the on-call team during the escalation and write post-mortem reports as JIRA conference pages.
+      </div>
+    </div>
+    <div class="col-lg-6">
+      <div><h5>AWS Based Microservice</h5></div>
+      <div>
+        Dockerize existing micro services for better horizontal scalability. Modify functions that use AWS infrastructure instead of the local utilities. Predict potential cost by analyzing existing order data and setup the auto-scale limit.
+      </div>
+    </div>
+  </div>
+
+</div>
