--- a/src/app/modules/home/component/home.component.html
+++ b/src/app/modules/home/component/home.component.html
@@ -1,2 +1,8 @@
-<h2>Vincent He</h2>
-<h4>Full-Stack Developer</h4>
+<div class="home-container">
+  <div class="title">
+    <h2>Vincent He</h2>
+  </div>
+  <div class="sub-title">
+    <h4>Full-Stack Developer</h4>
+  </div>
+</div>
