--- a/src/app/modules/resume/component/resume.component.html
+++ b/src/app/modules/resume/component/resume.component.html
@@ -1,1 +1,127 @@
-<p>resume works!</p>
+<div class="page-content">
+  <div class="row page-title">
+    <h2>Resume</h2>
+  </div>
+
+  <div class="row space-30">
+    <div class="col-lg-8">
+      <div class="row">
+        <h5>Education</h5>
+      </div>
+
+      <div class="row">
+        <div class="timeline timeline-second-style clearfix">
+          <div class="timeline-item clearfix">
+            <div class="left-part">
+              <h5 class="item-period">2014-2016</h5>
+              <span class="item-company">Columbia University<br> New York, NY</span>
+            </div>
+            <div class="divider"></div>
+            <div class="right-part">
+              <h4 class="item-title">Master of Science in Electrical Engineering</h4>
+              <p>The Fu Foundation School of Engineering & Applied Science
+              </p>
+            </div>
+          </div>
+
+          <div class="timeline-item clearfix">
+            <div class="left-part">
+              <h5 class="item-period">2011-2014</h5>
+              <span class="item-company">Saint Louis University<br> Saint Louis, MO</span>
+            </div>
+            <div class="divider"></div>
+            <div class="right-part">
+              <h4 class="item-title">Bachelor of Science in Electrical Engineering</h4>
+              <p>Parks College of Engineering, Aviation & Technology<br>
+                Honors: magna cum laude, membership of Tau Beta Pi preeminent engineering honor society
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <h5>Experience</h5>
+      </div>
+
+      <div class="row">
+        <div class="timeline timeline-second-style clearfix">
+          <div class="timeline-item clearfix">
+            <div class="left-part">
+              <h5 class="item-period">2018-Present</h5>
+              <span class="item-company">Emerson Ecologics<br> Manchester, NH</span>
+            </div>
+            <div class="divider"></div>
+            <div class="right-part">
+              <h4 class="item-title">Software Engineer</h4>
+              <ul>
+                <li>Executed all the front-end refactoring for an urgent upgrade of the company’s shipping service, the delivered feature secured over $15M for the company in shipping costs in 2020</li>
+                <li>Implemented a hybrid router to expedite the upgrading of the website from AngularJS to Angular 10; newly developed Angular components have 98% covered unit tests protected by GitHub actions</li>
+                <li>Facilitated the migration of a monolithic e-commerce app to modern microservice architecture, fixing production bugs during the period of the platform stabilization process</li>
+                <li>Converted the microservice framework into the NuGet package and developed the GitHub actions for automatic publishing</li>
+                <li>Designed and developed a discount service in .Net Core that enabled using multiple coupons for an order</li>
+                <li>Integrated a discount management module to the front-end storefront console application, which allows the marketing manager to manage discounts with UI</li>
+                <li>Optimized the image processing service to resize product images and host them on the AWS S3 bucket</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="timeline-item clearfix">
+            <div class="left-part">
+              <h5 class="item-period">2016-2018</h5>
+              <span class="item-company">Emerson Ecologics<br> Manchester, NH</span>
+            </div>
+            <div class="divider"></div>
+            <div class="right-part">
+              <h4 class="item-title">Front-End Developer</h4>
+              <ul>
+                <li>Developed and supported single page applications using Angular 1.x framework</li>
+                <li>Revamped existing User Interface for the e-commerce platform</li>
+                <li>Performed unit testing and managed development version control</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="row">
+          <div class="row">
+            <h5>Coding <span class="primary-text">Skills</span></h5>
+          </div>
+          <div class="resume-skills">
+            <i class="devicon-amazonwebservices-original"></i>
+            <i class="devicon-angularjs-plain"></i>
+            <i class="devicon-babel-plain"></i>
+            <i class="devicon-bash-plain"></i>
+            <i class="devicon-bootstrap-plain"></i>
+            <i class="devicon-csharp-plain"></i>
+            <i class="devicon-css3-plain"></i>
+            <i class="devicon-debian-plain"></i>
+            <i class="devicon-docker-plain"></i>
+            <i class="devicon-git-plain"></i>
+            <i class="devicon-github-original"></i>
+            <i class="devicon-gulp-plain"></i>
+            <i class="devicon-html5-plain"></i>
+            <i class="devicon-jasmine-plain"></i>
+            <i class="devicon-javascript-plain"></i>
+            <i class="devicon-jquery-plain-wordmark"></i>
+            <i class="devicon-less-plain-wordmark"></i>
+            <i class="devicon-mongodb-plain-wordmark"></i>
+            <i class="devicon-matlab-plain"></i>
+            <i class="devicon-nginx-original"></i>
+            <i class="devicon-nodejs-plain"></i>
+            <i class="devicon-npm-original-wordmark"></i>
+            <i class="devicon-python-plain"></i>
+            <i class="devicon-redis-plain"></i>
+            <i class="devicon-sass-original"></i>
+            <i class="devicon-typescript-plain"></i>
+            <i class="devicon-ubuntu-plain"></i>
+            <i class="devicon-visualstudio-plain"></i>
+            <i class="devicon-webpack-plain"></i>
+            <i class="devicon-windows8-original"></i>
+          </div>
+      </div>
+    </div>
+  </div>
+</div>
