--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,85 +1,34 @@
-.navbar-container {
-  position: fixed;
-  height: 100%;
-}
+.app-container{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
 
-.navbar-link-col {
-  height: 100%;
-  background-color: #222;
-  width: 90px;
-  float: left;
-
-  .nav-link {
-    border-bottom: 1px solid #333;
-    border-bottom-color: rgb(51, 51, 51);
-    text-align: center;
-    height: 80px;
-  }
-
-  .active-nav {
-    .nav-icon {
-      color: #04b4e0;
-    }
-  }
-
-  .nav-icon {
-    display: block;
-    font-size: 30px;
-    color: #b5b6b7;
-  }
-
-  .link-text {
-    font-size: 15px;
-    line-height: 1.65em;
-    color: #eee;
-  }
-}
-
-.navbar-avatar-col {
-  height: 100%;
-  width: 500px;
-  background-color: #333;
-  text-align: center;
-
-  .navbar-avatar-container{
+  .nav-container{
+    flex-basis: 500px;
+    flex-grow: 0;
+    flex-shrink: 0;
     height: 100%;
-    max-height: 80vh;
-    text-align: center;
-    padding-top: 60px;
+  }
+
+  .page-container{
+    width: 100%;
+    height: 100%;
+    font-size: 1em;
+    line-height: 1.65em;
+    background-color: #222222;
+    color: #d5d5d5;
 
     h2{
-      font-size: 36px;
-      font-weight: 600;
-      color: #f5f5f5;
+      font-size: 32px;
+    }
+
+    h3{
+      font-size: 21px;
     }
 
     h4{
       font-size: 18px;
-      font-weight: 300;
-      color: #bbb;
-      margin: 5px 0;
-      line-height: 1.2em;
     }
   }
-
-  .avatar-img {
-    width: 180px;
-    margin: 10px;
-    border: 3px solid #fff;
-    border-radius: 300px;
-  }
-
-  .avatar-cv-link{
-    margin-top: 25px;
-    border-radius: 25px;
-  }
-}
-
-.page-container {
-  position: absolute;
-  left: 500px;
-  background-color: #222;
-  color: #eee;
-  height: 100%;
-  width: 100%;
 }
