--- a/src/app/modules/portfolio/component/portfolio.component.html
+++ b/src/app/modules/portfolio/component/portfolio.component.html
@@ -1,1 +1,19 @@
-<p>portfolio works!</p>
+<div class="page-content">
+  <div class="row page-title">
+    <h2>Portfolio</h2>
+  </div>
+  <div class="row">
+    <div class="col-lg-4">
+      <a href="https://drive.google.com/file/d/1pRMN2zgWfTfQAaCHDg8k_mINScOBSboQ/view?usp=sharing">Doom Motor</a>
+    </div>
+    <div class="col-lg-4">
+      Writing Sample
+    </div>
+    <div class="col-lg-4">
+      Secret Hiring
+    </div>
+    <div class="col-lg-4">
+      Cheese Cave
+    </div>
+  </div>
+</div>
