--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,26 @@
 @import "node_modules/bootstrap/scss/variables";
 @import "node_modules/bootstrap/scss/mixins";
 @import "node_modules/bootstrap-icons/font/bootstrap-icons";
+
+*{
+  margin: 0;
+  padding: 0;
+  top: 0;
+}
+
+.page-content{
+  padding: 60px;
+  background-color: #222222;
+}
+
+.primary-text{
+  color:#04b4e0;
+}
+
+.space-30{
+  margin-top: 30px;
+}
+
+.space-50{
+  margin-top: 50px;
+}
