create portfolio and portfolio modal

--- a/src/app/modules/portfolio/component/portfolio.component.html
+++ b/src/app/modules/portfolio/component/portfolio.component.html
@@ -3,17 +3,50 @@
     <h2>Portfolio</h2>
   </div>
   <div class="row">
-    <div class="col-lg-4">
-      <a href="https://drive.google.com/file/d/1pRMN2zgWfTfQAaCHDg8k_mINScOBSboQ/view?usp=sharing">Doom Motor</a>
+    <div class="col-lg-4 space-30">
+      <a href="https://drive.google.com/file/d/1pRMN2zgWfTfQAaCHDg8k_mINScOBSboQ/view?usp=sharing" target="_blank" class="card">
+        <img class="card-img-top" src="https://chang-jobseek-2021.s3.amazonaws.com/doom_motor.PNG" alt="Doom Motor">
+        <div class="card-body">
+          <h5 class="card-title">Doom Motor</h5>
+          <p class="card-text">Playing Doom music with step motors.</p>
+        </div>
+      </a>
     </div>
-    <div class="col-lg-4">
-      Writing Sample
+    <div class="col-lg-4 space-30">
+      <a href="https://chang-jobseek-2021.s3.amazonaws.com/writing_sample.pdf" target="_blank" class="card">
+        <img class="card-img-top" src="https://chang-jobseek-2021.s3.amazonaws.com/writing_sample.jpg" alt="Writing Sample">
+        <div class="card-body">
+          <h5 class="card-title">Writing Sample</h5>
+          <p class="card-text">A writing example about my daily communication with the team.</p>
+        </div>
+      </a>
     </div>
-    <div class="col-lg-4">
-      Secret Hiring
+    <div class="col-lg-4 space-30">
+      <div class="card">
+        <img class="card-img-top" src="https://chang-jobseek-2021.s3.amazonaws.com/foo_bar_challenge.PNG" alt="FooBar Challenge">
+        <div class="card-body">
+          <h5 class="card-title">FooBar Challenge</h5>
+          <p class="card-text">Google secret foobar code challenge.</p>
+        </div>
+      </div>
     </div>
-    <div class="col-lg-4">
-      Cheese Cave
+    <div class="col-lg-4 space-30">
+      <a href="https://github.com/VincentSkylark/FiveCardDraw" target="_blank" class="card">
+        <img class="card-img-top" src="https://chang-jobseek-2021.s3.amazonaws.com/five_card_draw.PNG" alt="Five Card Draw">
+        <div class="card-body">
+          <h5 class="card-title">Five Card Draw</h5>
+          <p class="card-text">A poker game written in vanilla JavaScript.</p>
+        </div>
+      </a>
+    </div>
+    <div class="col-lg-4 space-30">
+      <div class="card">
+        <img class="card-img-top" src="https://chang-jobseek-2021.s3.amazonaws.com/cheese_cave.jpg" alt="Cheese Cave">
+        <div class="card-body">
+          <h5 class="card-title">Cheese Cave</h5>
+          <p class="card-text">A raspberry-powered mini cheese maker.</p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
