--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -13,7 +13,7 @@
       <img class="avatar-img" alt="avatar-img" src="../../assets/VincentAvatar.svg">
       <h2>Vincent He</h2>
       <h4>Full-Stack Developer</h4>
-      <a href="https://chang-jobseek-2021.s3.amazonaws.com/Chang_Cover.pdf" target="_blank" class="btn btn-outline-light avatar-cv-link">Download CV</a>
+      <a href="https://chang-jobseek-2021.s3.amazonaws.com/Chang_Resume.pdf" target="_blank" class="btn btn-outline-light avatar-cv-link">Download Resume</a>
     </div>
   </div>
 </div>
